kubernetes/apps/gitlab-runner/renovate/app/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.35.0-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: renovate
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    meta.helm.sh/release-name: renovate
    meta.helm.sh/release-namespace: gitlab-runner
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: renovate
